# indiaml-tracker

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  RATING_NORMALIZATION_FIX.md  README.md  affiliations.txt  dashboard_data.json  filtered.csv  output.csv  output_profiles.json  output_profiles_with_twitter.json  requirements.txt  run_pipeline.sh
indiaml/: example_logging_usage.py  logging.conf  process_nomap.py  pyproject.toml  todo.tldr  updated_affiliations.csv
indiaml/indiaml/: gr.sh
indiaml/indiaml/analytics/: analytics.py
indiaml/indiaml/config/: d2cc.py  db_config.py  logging_config.py  name2cc.py  pipeline_v2_config.py  venues_config.py
indiaml/indiaml/models/: conference_schema.py  dto.py  models.py  models_v2.py
indiaml/indiaml/patch/: generate_classficiation.py
indiaml/indiaml/pipeline/: affiliation_checker.py  generate_final_jsons.py  generate_summaries.py  patch_unk_cc2.py  patch_unk_cc3.py  patch_unk_cc4.py  patch_unk_cc5.py  process_accept_type.py  process_authors.py  process_dashboard_data.py  process_paper_author_mapping.py  process_venue.py
indiaml/indiaml/pipeline_v2/: author_extractor.py  institute_extractor.py  paper_extractor.py  parse_config.py
indiaml/indiaml/tests/: test_affiliation_checker.py
indiaml/indiaml/venue/: venudao.py
indiaml/indiaml/venue_adapters/: adapter_factory.py  base_adapter.py  icai_adapter.py  icml_adapter.py  neurips_adapter.py
indiaml/indiaml_v2/: CONFERENCE_DETECTION_UPDATE.md  README.md  config.py  docs_README.md  logging_config.py  test_conference_detection.py
indiaml/indiaml_v2/analytics/: PIPELINE_SUMMARY.md  README.md  __init__.py  analytics_pipeline.py  config.py  country_analyzer.py  global_stats_generator.py  institution_analyzer.py
indiaml/indiaml_v2/models/: models.py
indiaml/indiaml_v2/pipeline/: batch_importer.py  paper_pipeline.py  paperlist_importer.py  rating_validator.py  (+2 more)
(+322 files in other folders)
